@@ -1,5 +1,7 @@
 CHANGES IN VERSION 2.7.11
 ------------------------
+ o order first followed by showCategory subsetting in barplot <2015-09-08, Tue> 
+   + https://support.bioconductor.org/p/71917/#71939
  o bug fixed in EXTID2NAME, keytype is TAIR for arabidopsis and ORF for malaria <2015-08-26, Wed>
  
 CHANGES IN VERSION 2.7.10
